@@ -60,6 +60,7 @@ static struct {
 { "PS",	  true,		 "ps",  "Adobe PostScript Level I" },
 { "PS2",  HAVE_PSLEVEL2, "ps",  "Adobe PostScript Level II" },
 { "PCL",  HAVE_PCL5,	 "pcl", "HP Printer Control Language (PCL), Version 5"},
+{ "PDF",  true,		 "pdf", "Adobe Portable Document Format" },
 };
 static 	const char* typenames[] =  { "ASCII", "EBCDIC", "Image", "Local" };
 static 	const char* strunames[] =  { "File", "Record", "Page", "TIFF" };
