@@ -92,6 +92,7 @@
 #define	FORM_PS		1	// PostScript Level I
 #define	FORM_PS2	2	// PostScript Level II
 #define	FORM_PCL	3	// HP-PCL5
+#define	FORM_PDF	4	// Portable Document Format
 
 /*
  * Definitions for the TELNET protocol (only those used).
