@@ -458,7 +458,7 @@ FaxClient::FaxParam FaxClient::struParam =
     { "STRU", struNames, N(struNames), &FaxClient::stru };
 bool FaxClient::setStruct(u_int v)	{ return setCommon(struParam, v); }
 
-static const char* formNames[] = { "", "PS", "PS2", "TIFF", "PCL" };
+static const char* formNames[] = { "", "PS", "PS2", "TIFF", "PCL", "PDF" };
 FaxClient::FaxParam FaxClient::formParam =
     { "FORM", formNames, N(formNames), &FaxClient::format };
 bool FaxClient::setFormat(u_int v)	{ return setCommon(formParam, v); }
