@@ -66,8 +66,8 @@
 #	  and embedded spaces, but not embedded tabs, are allowed.
 #	  These data are taken literally; no C-style character escapes
 #         are meaningful.
-# result: one of "PS", "TIFF, or "error" (case insensitive).  The first
-#	  two results specifiy whether the rule generates a PostScript
+# result: one of "PS", "TIFF", "PDF", or "error" (case insensitive).  The
+#	  first two results specifiy whether the rule generates a PostScript
 #	  file or a bilevel TIFF image.  The "error" result indicates a
 #	  file is unsuitable for transmission and if supplied as an
 #	  argument to sendfax, the command should be aborted.
@@ -113,7 +113,7 @@
 # HylaFAX now has server-side PDF conversion, so no need for pdf2ps.
 # If you have trouble or if you prefer to use pdf2ps, comment this 
 # next line and uncomment the second.
-0	string		%PDF		ps
+0	string		%PDF		pdf
 #0	string		%PDF		ps	pdf2ps %i %o
 #
 # NB: psdit is the Adobe Transcript program for converting ditroff output
