@@ -2,6 +2,7 @@
 
 Changelog
 
+* use PDF in q-files when appropriate (30 Jan 2006)
 * fix configure in vsnprintf detection (30 Jan 2006)
 * fix segfault on some compilers where the rare occassion
   of receiving CTC instead of PPS occurs (30 Jan 2006)
